src/qbert_py_laserfollow/log/build_2023-03-22_13-34-36/qbert_py_laserfollow/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/johnma/ros2_ws/src/qbert_py_laserfollow/install/qbert_py_laserfollow/lib/python3.10/site-packages/qbert_py_laserfollow/laserfollow.py", line 43
    print(f"back: {ranges[0]} -- right: {ranges[front//2]} -- front: {ranges[front]} -- left: {ranges[front//.5]} )
          ^
SyntaxError: unterminated string literal (detected at line 43)

